# Rusty-Vault

./: Cargo.toml  README.md
Rusty-Vault-Plan_Files/: Rusty_Vault_Spec.md  Rusty_Vault_StarterPrompt.md
rv-client/: Cargo.toml
rv-client/src/: client.rs  config.rs  crypto.rs  main.rs
rv-client/src/commands/: delete.rs  init.rs  list.rs  mod.rs  ping.rs  pull.rs  push.rs
rv-server/: Cargo.toml
rv-server/src/: main.rs
