[package]
name = "rv-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rusty_vault"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
rpassword = "7"
base64 = "0.22"
anyhow = "1"
